<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>uam_util</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="christian.llanes@gatech.edu">llanesc</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>


    <depend>rclcpp</depend>
    <depend>lifecycle_msgs</depend>
    <depend>rclcpp_action</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>action_msgs</depend>
    <depend>bondcpp</depend>
    <depend>bond</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
