<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_bridge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="christian.llanes@gatech.edu">llanesc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_msgs</depend>
  <depend>flight_manager_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>util</depend>
  <depend>nav_msgs</depend>
  <depend>vehicle_interface_msgs</depend>
  <depend>px4_ros_com</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
